--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
-  "cpp-class-helper.srcFolderPath": "/home/lorenzo/Documents/POEI/cpp_cours/Chess/src",
-  "cpp-class-helper.includeFolderPath": "/home/lorenzo/Documents/POEI/cpp_cours/Chess/include"
+    "cpp-class-helper.srcFolderPath": "c:\\Users\\Formation\\Desktop\\CPP-Chess\\src",
+    "cpp-class-helper.includeFolderPath": "c:\\Users\\Formation\\Desktop\\CPP-Chess\\include"
 }
