--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,11 +2,7 @@ cmake_minimum_required(VERSION 3.0.0)
 project(Chess VERSION 1.0.0 LANGUAGES CXX)
 
 include(CTest)
-include_directories("${CMAKE_CURRENT_SOURCE_DIR}/include")
-
-set(EXE Chess)
-set(SRC ${CMAKE_SOURCE_DIR}/src)
-set(TEST ${CMAKE_SOURCE_DIR}/tests)
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
 
 include(FetchContent)
 FetchContent_Declare(
@@ -15,6 +11,10 @@ FetchContent_Declare(
 )
 set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
 FetchContent_MakeAvailable(googletest)
+
+set(EXE Chess)
+set(SRC ${CMAKE_SOURCE_DIR}/src)
+set(TEST ${CMAKE_SOURCE_DIR}/tests)
 
 add_subdirectory(${SRC})
 add_subdirectory(${TEST})
